--- a/4-02/4-02.md
+++ b/4-02/4-02.md
@@ -48,6 +48,35 @@
  
 *Выполните необходимую конфигурацию и приложите список сделанных команд для каждого маршрутизатора.*
 
+### Решение
+
+```
+Router1
+router ospf 10
+    network 1.1.1.0 0.0.0.255 area 10
+    network 192.168.1.0 0.0.0.255 area 10
+    network 209.45.185.0 0.0.0.255 area 10
+
+Router2
+router ospf 10
+    network 2.2.2.0 0.0.0.255 area 10
+    network 192.168.1.0 0.0.0.255 area 10
+    network 172.16.1.0 0.0.0.255 area 10
+
+Router3
+router ospf 10
+    network 3.3.3.0 0.0.0.255 area 10
+    network 192.168.1.0 0.0.0.255 area 10
+    network 192.168.3.0 0.0.0.255 area 10
+
+Router4
+router ospf 10
+    network 192.168.40.0 0.0.0.255 area 10
+    network 192.168.1.0 0.0.0.255 area 10
+    network 192.168.4.0 0.0.0.255 area 10
+```
+![1](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4021.png)
+
 ------
 
 ### Задание 2. Проверка построения соседства
@@ -59,14 +88,36 @@
 
 *Выполните необходимую конфигурацию и приведите ответы на вопросы в свободной форме.*
 
+### Решение
+
+- Пакет - OSPF Hello
+- Формат - AREA ID:0.0.0.10
+
+![2](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4022.png)
+
 ------
 ### Задание 3. Оповещение соседей о потерянном маршруте
 
-После установления соседства, отключите Loopback 0 на Router4 и посмотрите, каким образом произойдет оповещение соседей о потере маршрута. Посредством чего OSPF маршрутизатор
-оповещает соседей о потерянном маршруте?
+После установления соседства, отключите Loopback 0 на Router4 и посмотрите, каким образом произойдет оповещение соседей о потере маршрута. Посредством чего OSPF маршрутизатор оповещает соседей о потерянном маршруте?
 
 *Приведите ответы на вопросы в свободной форме.*
 
+### Решение
+
+- сначала проходят Hello пакеты с полным набором соседей.
+- через 40 секунд, когда не приходит ответ от одного из соседей происходит новое установление соседства
+- отправляются пакеты DBD, LSU и LSAck
+- после успешного утсановления Hello пакет содержит актуальных соседей.
+
+![3](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4023.png)
+
+![4](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4024.png)
+
+![5](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4025.png)
+
+![6](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4026.png)
+
+![7](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4027.png)
 
 ------
 
@@ -76,6 +127,14 @@
 Какую команду необходимо использовать для получения информации о DR/BDR? Сошлись ли предположения с реальностью? Если нет, то почему?
 
 *Приведите ответы на вопросы в свободной форме.*
+
+### Решение
+
+DR и BDR должны получить роутеры с самым высоким Router ID = Router4, Router 3, но так как сеть настраивалась не одновременно (show ip ospf database - Age) на всеx роутерах и роутеры для решения заданий отключались, то предположение не совпало с реальностью.
+```
+show ip ospf neighbor
+```
+![8](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4028.png)
 
 ------
 
@@ -88,6 +147,19 @@
 5. Какой командой перезапустить процесс OSPF?
 
 *Приложите список сделанных команд.* 
+
+### Решение
+```
+1 - show ip ospf
+
+2 - show ip ospf interface
+
+3 - show ip ospf neighbor
+
+4 - show ip ospf interface
+
+5 - clear ip ospf process
+```
 
 ### Правила приема домашнего задания
 
