--- a/4-02/4-02.md
+++ b/4-02/4-02.md
@@ -1,4 +1,5 @@
 # Домашнее задание к занятию "Протокол OSPF. Построение соседства, машина состояний, LSDB"
+# Евгений Островский
 
 ### Цель задания
 
