--- a/4-03/4-03.md
+++ b/4-03/4-03.md
@@ -1,4 +1,5 @@
 # Домашнее задание к занятию "Протокол OSPF. Метрика, зоны и суммаризация"
+# Островский Евгений
 
 ### Цель задания
 
@@ -38,6 +39,11 @@
 
 *Приведите список маршрутизаторов R1, R2, R3, R4, R5, R6, R7 c указанием их типов.*
 
+### Ответ:
+- internal (Внутренний маршрутизатор — все интерфейсы которого принадлежат одной зоне): R1, R5, R4, R6, R7
+- backbone (Магистральный маршрутизатор - хотя бы один интерфейс принадлежит магистральной зоне): R1, R2, R3, R5
+- ABR (Пограничный маршрутизатор - имеет интерфейсы в разных зонах): R2, R3
+
 ---
 
 ### Задание 2
@@ -52,6 +58,16 @@
 
 *Приведите ответы на вопросы в свободной форме. В вопросе 3, если необходима конфигурация на маршрутизаторах, то приведите команды, которые необходимо применить и на каких маршрутизаторах.*
 
+### Ответ:
+1) R1-R2-R4 = 1 + 1 + 1 = 3; R1-R3-R4 = 1 + 1 + 1 = 3
+2) Оба маршрута будут установлерны в таблицу маршрутизатора. И маршрут R1-R2-R4 будет не оптимальным
+3) Так как есть маршрут с более высокой скоростью передачи - 1GBPS необходимо изменить auto-cost reference-bandwidth на всех роутерах
+```
+auto-cost reference-bandwidth 1000
+```
+Тогда получим R1-R2-R4 = 10 + 10 + 10 = 30, R1-R3-R4 = 10 + 10 + 1 = 21 и R1-R3-R4 будет оптимальным маршрутом.
+
+
 ### Задание 3 
 
 По топологии из Задания 1, сеть 172.16.1.0/24 анонсируется в OSPF через R4 и R5. 
@@ -61,6 +77,14 @@
 4) После того, как будет учитываться правильно каждый линк, изменится ли ситуация с выбором маршрута на R1? Почему?
  
 *Приведите ответы на вопросы в свободной форме. В вопросе 3, напишите точно какую/какие команды необходимо использовать на маршрутизаторах*
+
+### Ответ:
+1) Маршрутизатор выбирает наиболее приоритетный тип маршрута и не учитывает стоимость маршрута - получаем что будет выбран R1-R5, так как он является внутренним маршрутом зоны
+2) Метрики будут следующие - R1-R5 = 110, R1-R2-R4 = 4, R1-R3-R4 = 4
+3) Для правильного учета необходимо изменить - `auto-cost reference-bandwidth 10000`
+4) Ситуация с выбором маршрута не измениться, так как внутренний маршрут будет всегда приоритетнее, не зависимо от стоимости
+
+
 
 ## Дополнительные задания (со звездочкой*)
 
