--- a/4-03/4-03.md
+++ b/4-03/4-03.md
@@ -60,7 +60,7 @@
 
 ### Ответ:
 1) R1-R2-R4 = 1 + 1 + 1 = 3; R1-R3-R4 = 1 + 1 + 1 = 3
-2) Оба маршрута будут установлерны в таблицу маршрутизатора. И маршрут R1-R2-R4 будет не оптимальным
+2) Оба маршрута будут установлены в таблицу маршрутизатора. И маршрут R1-R2-R4 будет не оптимальным
 3) Так как есть маршрут с более высокой скоростью передачи - 1GBPS необходимо изменить auto-cost reference-bandwidth на всех роутерах
 ```
 auto-cost reference-bandwidth 1000
