--- a/4-04/4-04.md
+++ b/4-04/4-04.md
@@ -1,4 +1,5 @@
 # Домашнее задание к занятию "Протокол OSPF. Настройка и диагностика."
+# Островский Евгений
 
 ### Цель задания
 
@@ -40,13 +41,43 @@
 Необходимо:
 
 - настроить фильтрацию маршрутов из Area 7. В Area 0 из Area 7 должны попадать только маршруты с подсетью /24, в другие зоны передаются все маршруты. На каких маршрутизаторах и какие команды надо применить для выполнения данного правила?
-- настроить фильтрацию маршрутов из Area 3 так, чтоб маршруты: 192.168.8.0/25 и 192.168.88.0/25 не попадали в Area 5.
-- настроить так, чтобы в таблице маршрутизации:
 
+На R2, R3
+```
+ip prefix-list Area0_filter_list permit 0.0.0.0/24
+ip prefix-list Area0_filter_list deny 0.0.0.0/25
+area 0 filter-list prefix Area0_filter_list in
+```
+
+- настроить фильтрацию маршрутов из Area 3 так, чтоб маршруты: 192.168.8.0/25 и 192.168.88.0/25 не попадали в Area 5.
+
+На R2, R3
+```
+ip prefix-list Area5_filter_list deny 192.168.8.0/25
+ip prefix-list Area5_filter_list deny 192.168.88.0/25
+area 5 filter-list prefix Area5_filter_list in
+```
+- настроить так, чтобы в таблице маршрутизации:
   -  на R9 были только чётные маршруты: 10.10.0.0/24, 10.10.2.0/24 из Area 0,
 
-  -  на R10 нечетные: 10.10.1.0/24, 10.10.3.0/24. 
+На R9
+```
+ip prefix-list Area0_filter_list permit 10.10.0.0/24
+ip prefix-list Area0_filter_list permit 10.10.2.0/24
+ip prefix-list Area0_filter_list deny 10.10.1.0/24
+ip prefix-list Area0_filter_list deny 10.10.3.0/24
+area 0 filter-list prefix Area0_filter_list in
+```
+  -  на R10 нечетные: 10.10.1.0/24, 10.10.3.0/24.
 
+На R10
+```
+ip prefix-list Area0_filter_list permit 10.10.1.0/24
+ip prefix-list Area0_filter_list permit 10.10.3.0/24
+ip prefix-list Area0_filter_list deny 10.10.2.0/24
+ip prefix-list Area0_filter_list deny 10.10.4.0/24
+area 0 filter-list prefix Area0_filter_list in
+```
 *Для каждого подзадания приведите список маршрутизаторов, на которых необходимы изменения со списком полных команд на нём.*
 
 ---
@@ -56,6 +87,11 @@
 По топологии из Задания 1, настройте следующую суммаризацию:
 
 1. Маршруты из Area 3 во всех других зонах должны быть представлены как суммированный маршрут 192.168.0.0 255.255.0.0. На каких маршрутизаторах и какие команды надо применить для выполнения данного правила?
+
+На R2
+```
+area 3 range 192.168.0.0 255.255.0.0
+```
 
 3. _*(дополнительное со звездочкой)_ На маршрутизаторах R7 и R8 настроить анонс маршрута по умолчанию. Сделать так, чтобы маршрутизатор R1 предпочитал маршрут по умолчанию из Area 7, из Area 3 должен быть резервным. На каких маршрутизаторах и какие команды надо применить для выполнения данного правила?  
  (*Это задание дополнительное и никак не повлияет на получение вами зачета по этому домашнему заданию. Вы можете его выполнить, если хотите глубже и/или шире разобраться в материале*.)
@@ -72,6 +108,28 @@
 ![image](https://user-images.githubusercontent.com/51816695/152536159-c70fba09-053c-4b2d-9049-2e06be1ad0ac.png)
 
 *Приведите ответы на вопросы в свободной форме. Пришлите список маршрутизаторов и команд, сделанных на этих маршрутизаторах.*
+
+На любом роутере видим что есть интерфейс и сосед с одинаковыми адресами 192.168.12.1
+```
+show ip ospf interface
+show ip ospf neighbor
+```
+![1](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4041.png)
+
+Исправляем
+```
+ip add 192.168.12.2
+```
+
+На 2ом роутере видит что есть интерфейс в разных area 0 и 1 => соседей в 1 нет, area задана не верно
+```
+show ip ospf interface
+```
+![2](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4042.png)
+Исправляем
+```
+ip ospf 1 area 0
+```
 
 ---
 
