--- a/4-04/4-04.md
+++ b/4-04/4-04.md
@@ -121,7 +121,7 @@ show ip ospf neighbor
 ip add 192.168.12.2 255.255.255.0
 ```
 
-На 2ом роутере видит что есть интерфейс в разных area 0 и 1 => соседей в 1 нет, area задана не верно
+На 2ом роутере видим что есть интерфейс в разных area 0 и 1, соседей в 1 нет, area задана не верно
 ```
 show ip ospf interface
 ```
