--- a/4-04/4-04.md
+++ b/4-04/4-04.md
@@ -42,7 +42,7 @@
 
 - настроить фильтрацию маршрутов из Area 7. В Area 0 из Area 7 должны попадать только маршруты с подсетью /24, в другие зоны передаются все маршруты. На каких маршрутизаторах и какие команды надо применить для выполнения данного правила?
 
-На R2, R3
+На R3
 ```
 ip prefix-list Area0_filter_list permit 0.0.0.0/24
 ip prefix-list Area0_filter_list deny 0.0.0.0/25
@@ -57,6 +57,7 @@ ip prefix-list Area5_filter_list deny 192.168.8.0/25
 ip prefix-list Area5_filter_list deny 192.168.88.0/25
 area 5 filter-list prefix Area5_filter_list in
 ```
+### Доработка
 - настроить так, чтобы в таблице маршрутизации:
   -  на R9 были только чётные маршруты: 10.10.0.0/24, 10.10.2.0/24 из Area 0,
 
@@ -66,9 +67,9 @@ ip prefix-list Area0_filter_list permit 10.10.0.0/24
 ip prefix-list Area0_filter_list permit 10.10.2.0/24
 ip prefix-list Area0_filter_list deny 10.10.1.0/24
 ip prefix-list Area0_filter_list deny 10.10.3.0/24
-area 0 filter-list prefix Area0_filter_list in
+distribute-list Area0_filter_list in
 ```
-  -  на R10 нечетные: 10.10.1.0/24, 10.10.3.0/24.
+  -  на R10 нечетные: 10.10.1.0/24, 10.10.3.0/24
 
 На R10
 ```
@@ -76,7 +77,7 @@ ip prefix-list Area0_filter_list permit 10.10.1.0/24
 ip prefix-list Area0_filter_list permit 10.10.3.0/24
 ip prefix-list Area0_filter_list deny 10.10.2.0/24
 ip prefix-list Area0_filter_list deny 10.10.4.0/24
-area 0 filter-list prefix Area0_filter_list in
+distribute-list Area0_filter_list in
 ```
 *Для каждого подзадания приведите список маршрутизаторов, на которых необходимы изменения со списком полных команд на нём.*
 
