--- a/4-04/4-04.md
+++ b/4-04/4-04.md
@@ -67,7 +67,7 @@ ip prefix-list Area0_filter_list permit 10.10.0.0/24
 ip prefix-list Area0_filter_list permit 10.10.2.0/24
 ip prefix-list Area0_filter_list deny 10.10.1.0/24
 ip prefix-list Area0_filter_list deny 10.10.3.0/24
-distribute-list Area0_filter_list in
+distribute-list prefix Area0_filter_list in
 ```
   -  на R10 нечетные: 10.10.1.0/24, 10.10.3.0/24
 
@@ -77,7 +77,7 @@ ip prefix-list Area0_filter_list permit 10.10.1.0/24
 ip prefix-list Area0_filter_list permit 10.10.3.0/24
 ip prefix-list Area0_filter_list deny 10.10.2.0/24
 ip prefix-list Area0_filter_list deny 10.10.4.0/24
-distribute-list Area0_filter_list in
+distribute-list prefix Area0_filter_list in
 ```
 *Для каждого подзадания приведите список маршрутизаторов, на которых необходимы изменения со списком полных команд на нём.*
 
