--- a/4-06.md
+++ b/4-06.md
@@ -1,4 +1,5 @@
 # Домашнее задание к занятию "BGP в корпоративных сетях. Построение соседства, машина состояний, типы сообщений"
+# Островский Евгений
 
 ### Цель задания
 Данное домашнее задание позволит научиться выполнять базовую настройку протокола BGP, что является важным навыком для сетевого администратора. 
@@ -29,6 +30,11 @@
 
 *Приведите ответ в свободной форме.*
 
+### Ответ
+Если брать стандартные настройки, то не передавались
+- OPEN - так как соединение установлено и активно
+- NOTIFICATION -указывает на состояние ошибки и приводит к закрытию BGP-соединения
+
 ### Задание 2. Лабораторная работа "Настройка конфигурации BGP"
 
 1. В Cisco Packet Tracer соберите сеть, состоящую из двух маршрутизаторов R1 и R2, находящиеся в разных AS.
@@ -39,11 +45,34 @@
 
 *Пришлите pkt файл.*
 
+[PKT-Файл](https://github.com/joos-ntw/drut-homeworks/blob/main/img/406_1.pkt)
+
+![1](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4061.png)
+![2](https://github.com/joos-ntw/drut-homeworks/blob/main/img/4062.png)
+
 ### Задание 3
 На основе предыдущей лабораторной работы настройте маршрутизацию таким образом, чтобы трафик от R2 проходил через маршрутизаторы: R4->R5->R1.
 В качестве ответа приложите примеры конфигураций устройств.
 
 *Приведите ответ в свободной форме.*
+
+### Ответ
+Для выбора необходимого маршрута необходимо изменить значение weight или local preference маршрута.
+
+Например
+```
+ip prefix-list AS100_PL permit 100.100.100.0/24
+
+route-map AS100_RM permit 10
+ match ip address prefix-list AS100_PL
+ set local-preference 200
+route-map AS100_RM permit 20
+ 
+router bgp 220
+ neighbor 103.0.0.1 route-map AS100_RM in
+
+clear ip bgp * soft
+```
 
 
 ### Правила приема домашнего задания
