--- a/4-08.md
+++ b/4-08.md
@@ -1,4 +1,5 @@
 # Домашнее задание к занятию "Отсутствие связности: диагностика и устранение"
+# Островский Евгений
  
 ### Цель задания
  
@@ -42,6 +43,15 @@
  
 *Результаты выполнения задания оформить в один документ: скриншоты + текст. Так же предоставить файл .pkt*
 
+### Ответ
+
+[PKT-File](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481.pkt)
+
+![1](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-1.png)
+![2](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-2.png)
+
+Для создания связи были прописаны статические маршруты для сетей на маршрутизаторах R1 и R3.
+
 ------
  
 ### Задание 2.
@@ -52,7 +62,6 @@
 
 ![OSPF_trouble_4](https://user-images.githubusercontent.com/40097402/159981921-29a61f4f-ce68-4755-b781-a3bebf230b8d.jpg)
 
-
 1) Настройте ospf на маршрутизаторах 
 2) Сделайте на каждом маршрутизаторе вывод команд:
 - show ip ospf
@@ -62,6 +71,20 @@
 3) В чём проблема? 
  
 *Вывод команд оформить в виде скриншотов, ответ на 3 в текстовом виде. Всё оформить в один документ. Также предоставить файл .pkt*
+
+### Ответ
+
+[PKT-File](https://github.com/joos-ntw/drut-homeworks/blob/main/img/482.pkt)
+
+![3](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-3.png)
+![4](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-4.png)
+![5](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-5.png)
+![6](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-6.png)
+![7](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-7.png)
+![8](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-8.png)
+
+В данной топологии сети Area 0 разделена, чего не должно быть. Для ее корректной работы необходимо настраивать виртуальный канал.
+Без виртуального канала корректного/ожидаемого взаимодействия между R1 и R3 не будет.
 
 ------
  
@@ -77,7 +100,20 @@
 - посмотрите информацию о соседе, которого нашли в пункте 2
  
 *В ответе прикрепите скриншот вывода информации и в свободной форме опишите, что вы видите в выводе.*
- 
+
+### Ответ
+Список
+- http://lg.mtu.ru/
+- http://lg.gldn.net/
+- https://lg.he.net/
+- https://lg.telia.net/
+
+![9](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-9.png)
+В полученной информации видим BGP статус, Keepalive, Holdtime, ID, количество входящий, исходящих, откланенных маршрутов
+
+![10](https://github.com/joos-ntw/drut-homeworks/blob/main/img/481-10.png)
+В выводе получаем диапазон адресов, принадлежность адреса, страну, статус, номер AS
+
 ---
  
 ### Правила приема домашнего задания
